osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_experiments/test_experimentwhen_too_few_buckets.txt
error: missing bucket 'b' required from experiment 'A'
--> main.sml:4:5
     |
   4 | EW = ExperimentWhen(control=[True, True, True], experiment=A)
     |      ^
--> (1) main.sml:3:34
     |
   3 | A = Experiment(entity=E1, buckets=['control', 'b'], bucket_sizes=[5, 5], version=1, revision=1)
     |                                   ^